improve Correlations_total.py part 5

--- a/run_features/scripts/feature_selection-development-only.ipynb
+++ b/run_features/scripts/feature_selection-development-only.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "c1c6e7ab-56df-4095-84c7-bfae8ee44c51",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "fad32d34-213d-4a93-9758-eb6e6b2fb352",
    "metadata": {},
    "outputs": [
@@ -55,7 +55,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Started script! Loading input file... 2024-07-02 15:03:53.389787\n"
+      "Started script! Loading input file... 2024-07-03 14:00:03.645706\n"
      ]
     }
    ],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "cab7895c-660a-4ecd-9b62-599918eabdad",
    "metadata": {},
    "outputs": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "8a44af7a-768b-4401-adb2-b91a2c7710e1",
    "metadata": {},
    "outputs": [
@@ -394,7 +394,7 @@
        "[5 rows x 100 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -404,7 +404,7 @@
        "(100, 100)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "9389ad6f-6937-419c-971b-7def1197f7b1",
    "metadata": {},
    "outputs": [
@@ -684,7 +684,7 @@
        "[5 rows x 100 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,7 +698,9 @@
     "correlation_matrix1 = X.corr(method='spearman')\n",
     "\n",
     "# Calculate Spearman correlation\n",
-    "corr, _ = spearmanr(X)\n",
+    "#corr, _ = spearmanr(X)\n",
+    "X_array = X.values\n",
+    "corr, _ = spearmanr(X_array)\n",
     "\n",
     "# Convert to DataFrame\n",
     "column_names = X.columns\n",
@@ -793,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "c27583c7-6857-4c04-a958-df08970380b9",
    "metadata": {},
    "outputs": [
@@ -1027,7 +1029,7 @@
        "[6 rows x 100 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1261,7 +1263,7 @@
        "[6 rows x 100 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1271,7 +1273,7 @@
        "(100, 100)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1281,7 +1283,7 @@
        "(100, 100)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1299,18 +1301,424 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "79598e1a-6998-410e-ae11-3bc5cec0daa0",
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AAAAAAACA   0.93\n",
+      "\n",
+      "Differences:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>AAAAAAAAA</th>\n",
+       "      <th>AAAAAAAAC</th>\n",
+       "      <th>AAAAAAAAG</th>\n",
+       "      <th>AAAAAAAAT</th>\n",
+       "      <th>AAAAAAACA</th>\n",
+       "      <th>AAAAAAACC</th>\n",
+       "      <th>AAAAAAACG</th>\n",
+       "      <th>AAAAAAACT</th>\n",
+       "      <th>AAAAAAAGA</th>\n",
+       "      <th>AAAAAAAGC</th>\n",
+       "      <th>...</th>\n",
+       "      <th>AAAAACCGG</th>\n",
+       "      <th>AAAAACCGT</th>\n",
+       "      <th>AAAAACCTA</th>\n",
+       "      <th>AAAAACCTC</th>\n",
+       "      <th>AAAAACCTG</th>\n",
+       "      <th>AAAAACCTT</th>\n",
+       "      <th>AAAAACGAA</th>\n",
+       "      <th>AAAAACGAC</th>\n",
+       "      <th>AAAAACGAG</th>\n",
+       "      <th>AAAAACGAT</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>AAAAAAAAA</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AAAAAAAAC</th>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AAAAAAAAG</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AAAAAAAAT</th>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AAAAAAACA</th>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AAAAACCTT</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AAAAACGAA</th>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AAAAACGAC</th>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AAAAACGAG</th>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AAAAACGAT</th>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 100 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           AAAAAAAAA  AAAAAAAAC  AAAAAAAAG  AAAAAAAAT  AAAAAAACA  AAAAAAACC  \\\n",
+       "AAAAAAAAA      False      False      False      False       True       True   \n",
+       "AAAAAAAAC       True      False       True      False       True       True   \n",
+       "AAAAAAAAG      False      False      False      False       True       True   \n",
+       "AAAAAAAAT       True      False      False      False      False       True   \n",
+       "AAAAAAACA       True       True      False       True      False       True   \n",
+       "...              ...        ...        ...        ...        ...        ...   \n",
+       "AAAAACCTT      False      False      False       True       True      False   \n",
+       "AAAAACGAA       True      False       True       True       True      False   \n",
+       "AAAAACGAC      False       True      False      False      False      False   \n",
+       "AAAAACGAG       True      False       True      False      False       True   \n",
+       "AAAAACGAT       True       True      False      False       True      False   \n",
+       "\n",
+       "           AAAAAAACG  AAAAAAACT  AAAAAAAGA  AAAAAAAGC  ...  AAAAACCGG  \\\n",
+       "AAAAAAAAA       True       True      False       True  ...      False   \n",
+       "AAAAAAAAC      False       True      False       True  ...       True   \n",
+       "AAAAAAAAG       True      False      False      False  ...      False   \n",
+       "AAAAAAAAT      False      False      False      False  ...      False   \n",
+       "AAAAAAACA      False      False      False       True  ...       True   \n",
+       "...              ...        ...        ...        ...  ...        ...   \n",
+       "AAAAACCTT       True      False      False      False  ...       True   \n",
+       "AAAAACGAA      False       True      False      False  ...       True   \n",
+       "AAAAACGAC      False      False      False       True  ...       True   \n",
+       "AAAAACGAG      False       True       True       True  ...      False   \n",
+       "AAAAACGAT      False       True       True       True  ...       True   \n",
+       "\n",
+       "           AAAAACCGT  AAAAACCTA  AAAAACCTC  AAAAACCTG  AAAAACCTT  AAAAACGAA  \\\n",
+       "AAAAAAAAA       True       True       True      False      False      False   \n",
+       "AAAAAAAAC       True       True       True      False      False       True   \n",
+       "AAAAAAAAG      False      False       True       True      False       True   \n",
+       "AAAAAAAAT      False       True       True       True       True       True   \n",
+       "AAAAAAACA       True       True      False      False       True      False   \n",
+       "...              ...        ...        ...        ...        ...        ...   \n",
+       "AAAAACCTT       True       True      False       True      False       True   \n",
+       "AAAAACGAA      False       True       True       True       True      False   \n",
+       "AAAAACGAC       True       True      False      False      False       True   \n",
+       "AAAAACGAG      False       True      False       True       True       True   \n",
+       "AAAAACGAT      False       True       True       True       True       True   \n",
+       "\n",
+       "           AAAAACGAC  AAAAACGAG  AAAAACGAT  \n",
+       "AAAAAAAAA       True      False       True  \n",
+       "AAAAAAAAC       True      False       True  \n",
+       "AAAAAAAAG      False       True      False  \n",
+       "AAAAAAAAT      False      False      False  \n",
+       "AAAAAAACA      False      False      False  \n",
+       "...              ...        ...        ...  \n",
+       "AAAAACCTT       True      False       True  \n",
+       "AAAAACGAA       True       True       True  \n",
+       "AAAAACGAC      False       True      False  \n",
+       "AAAAACGAG       True      False       True  \n",
+       "AAAAACGAT      False       True      False  \n",
+       "\n",
+       "[100 rows x 100 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AAAAAAAAC   0.91\n",
+      "AAAAAAAAG   0.91\n",
+      "AAAAAAAAT   0.89\n",
       "Name: AAAAAAAAA, dtype: float64\n",
-      "AAAAAAACA   0.92\n",
-      "Name: AAAAAAAAA, dtype: float64\n"
+      "AAAAAAAAC   0.91\n",
+      "AAAAAAAAG   0.91\n",
+      "AAAAAAAAT   0.89\n",
+      "Name: AAAAAAAAA, dtype: float64\n",
+      "\n",
+      "Summary Statistics:\n",
+      "Matrix 1 Mean: 0.790572556631618\n",
+      "Matrix 2 Mean: 0.790572556631618\n",
+      "Matrix 1 Std Dev: 0.1827579747841855\n",
+      "Matrix 2 Std Dev: 0.1827579747841855\n",
+      "Matrix 1 Min: -0.032605661438067673\n",
+      "Matrix 2 Min: -0.032605661438067673\n",
+      "Matrix 1 Max: 1.0\n",
+      "Matrix 2 Max: 1.0\n"
      ]
     }
    ],
