--- a/run_features/scripts/feature_selection-development-only.ipynb
+++ b/run_features/scripts/feature_selection-development-only.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "c1c6e7ab-56df-4095-84c7-bfae8ee44c51",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "fad32d34-213d-4a93-9758-eb6e6b2fb352",
    "metadata": {},
    "outputs": [
@@ -63,7 +63,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Started script! Loading input file... 2024-07-03 15:41:10.011992\n"
+      "Started script! Loading input file... 2024-07-05 10:23:32.951676\n"
      ]
     }
    ],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "cab7895c-660a-4ecd-9b62-599918eabdad",
    "metadata": {},
    "outputs": [
@@ -118,13 +118,249 @@
       " Shape of the input dataframe: (100, 101)\n",
       " Any NAs in the dataframe: False\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>AAAAAAAAA</th>\n",
+       "      <th>AAAAAAAAC</th>\n",
+       "      <th>AAAAAAAAG</th>\n",
+       "      <th>AAAAAAAAT</th>\n",
+       "      <th>AAAAAAACA</th>\n",
+       "      <th>AAAAAAACC</th>\n",
+       "      <th>AAAAAAACG</th>\n",
+       "      <th>AAAAAAACT</th>\n",
+       "      <th>AAAAAAAGA</th>\n",
+       "      <th>AAAAAAAGC</th>\n",
+       "      <th>...</th>\n",
+       "      <th>AAAAACCGT</th>\n",
+       "      <th>AAAAACCTA</th>\n",
+       "      <th>AAAAACCTC</th>\n",
+       "      <th>AAAAACCTG</th>\n",
+       "      <th>AAAAACCTT</th>\n",
+       "      <th>AAAAACGAA</th>\n",
+       "      <th>AAAAACGAC</th>\n",
+       "      <th>AAAAACGAG</th>\n",
+       "      <th>AAAAACGAT</th>\n",
+       "      <th>Oxygen tolerance</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Best assembly</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1002367.3</th>\n",
+       "      <td>53</td>\n",
+       "      <td>72</td>\n",
+       "      <td>54</td>\n",
+       "      <td>82</td>\n",
+       "      <td>96</td>\n",
+       "      <td>11</td>\n",
+       "      <td>52</td>\n",
+       "      <td>52</td>\n",
+       "      <td>95</td>\n",
+       "      <td>46</td>\n",
+       "      <td>...</td>\n",
+       "      <td>17</td>\n",
+       "      <td>21</td>\n",
+       "      <td>25</td>\n",
+       "      <td>15</td>\n",
+       "      <td>24</td>\n",
+       "      <td>52</td>\n",
+       "      <td>30</td>\n",
+       "      <td>24</td>\n",
+       "      <td>36</td>\n",
+       "      <td>anaerobe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1006155.5</th>\n",
+       "      <td>47</td>\n",
+       "      <td>87</td>\n",
+       "      <td>88</td>\n",
+       "      <td>137</td>\n",
+       "      <td>237</td>\n",
+       "      <td>80</td>\n",
+       "      <td>131</td>\n",
+       "      <td>139</td>\n",
+       "      <td>229</td>\n",
+       "      <td>159</td>\n",
+       "      <td>...</td>\n",
+       "      <td>58</td>\n",
+       "      <td>49</td>\n",
+       "      <td>64</td>\n",
+       "      <td>63</td>\n",
+       "      <td>68</td>\n",
+       "      <td>158</td>\n",
+       "      <td>77</td>\n",
+       "      <td>95</td>\n",
+       "      <td>150</td>\n",
+       "      <td>anaerobe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1008452.3</th>\n",
+       "      <td>14</td>\n",
+       "      <td>11</td>\n",
+       "      <td>26</td>\n",
+       "      <td>39</td>\n",
+       "      <td>78</td>\n",
+       "      <td>14</td>\n",
+       "      <td>41</td>\n",
+       "      <td>64</td>\n",
+       "      <td>104</td>\n",
+       "      <td>62</td>\n",
+       "      <td>...</td>\n",
+       "      <td>23</td>\n",
+       "      <td>24</td>\n",
+       "      <td>33</td>\n",
+       "      <td>42</td>\n",
+       "      <td>77</td>\n",
+       "      <td>59</td>\n",
+       "      <td>22</td>\n",
+       "      <td>42</td>\n",
+       "      <td>54</td>\n",
+       "      <td>facultative</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1009464.3</th>\n",
+       "      <td>30</td>\n",
+       "      <td>18</td>\n",
+       "      <td>5</td>\n",
+       "      <td>24</td>\n",
+       "      <td>34</td>\n",
+       "      <td>11</td>\n",
+       "      <td>24</td>\n",
+       "      <td>23</td>\n",
+       "      <td>28</td>\n",
+       "      <td>17</td>\n",
+       "      <td>...</td>\n",
+       "      <td>24</td>\n",
+       "      <td>20</td>\n",
+       "      <td>25</td>\n",
+       "      <td>27</td>\n",
+       "      <td>28</td>\n",
+       "      <td>31</td>\n",
+       "      <td>24</td>\n",
+       "      <td>22</td>\n",
+       "      <td>34</td>\n",
+       "      <td>anaerobe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>102684.41</th>\n",
+       "      <td>34</td>\n",
+       "      <td>38</td>\n",
+       "      <td>33</td>\n",
+       "      <td>57</td>\n",
+       "      <td>122</td>\n",
+       "      <td>30</td>\n",
+       "      <td>65</td>\n",
+       "      <td>88</td>\n",
+       "      <td>120</td>\n",
+       "      <td>105</td>\n",
+       "      <td>...</td>\n",
+       "      <td>27</td>\n",
+       "      <td>31</td>\n",
+       "      <td>31</td>\n",
+       "      <td>33</td>\n",
+       "      <td>54</td>\n",
+       "      <td>70</td>\n",
+       "      <td>42</td>\n",
+       "      <td>32</td>\n",
+       "      <td>63</td>\n",
+       "      <td>facultative</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 101 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               AAAAAAAAA  AAAAAAAAC  AAAAAAAAG  AAAAAAAAT  AAAAAAACA  \\\n",
+       "Best assembly                                                          \n",
+       "1002367.3             53         72         54         82         96   \n",
+       "1006155.5             47         87         88        137        237   \n",
+       "1008452.3             14         11         26         39         78   \n",
+       "1009464.3             30         18          5         24         34   \n",
+       "102684.41             34         38         33         57        122   \n",
+       "\n",
+       "               AAAAAAACC  AAAAAAACG  AAAAAAACT  AAAAAAAGA  AAAAAAAGC  ...  \\\n",
+       "Best assembly                                                         ...   \n",
+       "1002367.3             11         52         52         95         46  ...   \n",
+       "1006155.5             80        131        139        229        159  ...   \n",
+       "1008452.3             14         41         64        104         62  ...   \n",
+       "1009464.3             11         24         23         28         17  ...   \n",
+       "102684.41             30         65         88        120        105  ...   \n",
+       "\n",
+       "               AAAAACCGT  AAAAACCTA  AAAAACCTC  AAAAACCTG  AAAAACCTT  \\\n",
+       "Best assembly                                                          \n",
+       "1002367.3             17         21         25         15         24   \n",
+       "1006155.5             58         49         64         63         68   \n",
+       "1008452.3             23         24         33         42         77   \n",
+       "1009464.3             24         20         25         27         28   \n",
+       "102684.41             27         31         31         33         54   \n",
+       "\n",
+       "               AAAAACGAA  AAAAACGAC  AAAAACGAG  AAAAACGAT  Oxygen tolerance  \n",
+       "Best assembly                                                                \n",
+       "1002367.3             52         30         24         36          anaerobe  \n",
+       "1006155.5            158         77         95        150          anaerobe  \n",
+       "1008452.3             59         22         42         54       facultative  \n",
+       "1009464.3             31         24         22         34          anaerobe  \n",
+       "102684.41             70         42         32         63       facultative  \n",
+       "\n",
+       "[5 rows x 101 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "#Calculate Spearman correlation########################################\n",
     "\n",
     "print(\" Shape of the input dataframe:\", df.shape)\n",
-    "print(\" Any NAs in the dataframe:\", df.isnull().any().any() )"
+    "print(\" Any NAs in the dataframe:\", df.isnull().any().any() )\n",
+    "\n",
+    "df.head()"
    ]
   },
   {
