--- a/run_features/scripts/remove_zero-variance.ipynb
+++ b/run_features/scripts/remove_zero-variance.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 1,
    "id": "a1b4198e-983f-4c25-96c3-b7bba7bfacac",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 17,
    "id": "32d1043a-ac3f-43b2-b953-abe949fc3819",
    "metadata": {},
    "outputs": [
@@ -48,8 +48,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Started script! Loading input file... 2024-07-11 14:51:41.847801\n",
-      "Loaded input pickle zst file... 2024-07-11 14:51:41.986039\n"
+      "Started script! Loading input file... 2024-07-12 09:35:19.823738\n",
+      "Loaded input pickle zst file... 2024-07-12 09:35:19.949295\n"
      ]
     },
     {
@@ -290,7 +290,7 @@
        "[5 rows x 20142 columns]"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -300,7 +300,7 @@
        "(3630, 20142)"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 18,
    "id": "8da84179-219d-4b4e-afdf-d6a00ceb995b",
    "metadata": {
     "scrolled": true
@@ -895,7 +895,7 @@
       " Shape of dataframe without zero-variance features: (3630, 4225)  Any NAs in the dataframe? False\n",
       " Threshold: 0.008 Number of zero-variance features: 16149 , 80.2\n",
       " Shape of dataframe without zero-variance features: (3630, 3993)  Any NAs in the dataframe? False\n",
-      " Threshold: 0.009 Number of zero-variance features: 16342 , 81.1\n",
+      " Threshold: 0.009000000000000001 Number of zero-variance features: 16342 , 81.1\n",
       " Shape of dataframe without zero-variance features: (3630, 3800)  Any NAs in the dataframe? False\n",
       " Threshold: 0.01 Number of zero-variance features: 16504 , 81.9\n",
       " Shape of dataframe without zero-variance features: (3630, 3638)  Any NAs in the dataframe? False\n"
@@ -929,9 +929,6 @@
     "#Identify columns with different variances\n",
     "for i in np.arange(0, 0.011, 0.001):\n",
     "#for i in np.arange(0, 0.0021, 0.0001):\n",
-    "\n",
-    "    #Avoid inconvenient file naming below\n",
-    "    i = round(i, 3)\n",
     "    \n",
     "    tmp = X.copy()\n",
     "\n",
@@ -973,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 12,
    "id": "a51fa3e2-b1c1-4618-bc94-b0d451c5e791",
    "metadata": {},
    "outputs": [],
@@ -989,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 13,
    "id": "9320adcb-d4ad-4464-aae5-3a65e882a250",
    "metadata": {},
    "outputs": [],
